--- a/21-01/lesson5_21-01/index.html
+++ b/21-01/lesson5_21-01/index.html
@@ -8,13 +8,14 @@
 <body>
 
 <div class="todo">
-    <input type="text" id="input" placeholder="Enter Todo">
-    <button id="create_button">Create todo</button>
+    <input type="text" id="input" placeholder="Enter todo">
+    <button id="crete_todo">Create Todo</button>
 </div>
 
 <div id="todo_list">
 
 </div>
+
 
 
 </body>
